--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -5,39 +5,24 @@
 project_name: baseimage-alpine-nginx
 full_custom_readme: |
   {% raw -%}
-  [linuxserverurl]: https://linuxserver.io
-  [forumurl]: https://forum.linuxserver.io
-  [ircurl]: https://www.linuxserver.io/irc/
-  [appurl]: https://alpinelinux.org
-  [nginxurl]: http://nginx.org/en/
-
-
-
-  [![linuxserver.io](https://raw.githubusercontent.com/linuxserver/docker-templates/master/linuxserver.io/img/linuxserver_medium.png?v=4&s=4000)][linuxserverurl]
-
+  [![linuxserver.io](https://raw.githubusercontent.com/linuxserver/docker-templates/master/linuxserver.io/img/linuxserver_medium.png)](https://linuxserver.io)
 
   ## Contact information:-
 
   | Type | Address/Details |
   | :---: | --- |
-  | Discord | [Discord](https://discord.gg/YWrKVTn) |
-  | IRC | freenode at `#linuxserver.io` more information at:- [IRC][ircurl]
-  | Forum | [LinuxServer.io forum][forumurl] |
+  | Discord | [Discord](https://linuxserver.io/discord) |
+  | IRC | `#linuxserver.io` on irc.libera.chat |
+  | Forum | [Discourse](https://discourse.linuxserver.io/) |
 
-  &nbsp;
-  &nbsp;
+  A custom base image built with [Alpine Linux](https://alpinelinux.org), [nginx](https://nginx.org), and [s6-overlay](https://github.com/just-containers/s6-overlay).
 
-  [![](https://images.microbadger.com/badges/image/lsiobase/nginx.svg)](https://microbadger.com/images/lsiobase/nginx "Get your own image badge on microbadger.com")
-
-  [![](https://raw.githubusercontent.com/linuxserver/docker-templates/master/linuxserver.io/img/Dockerfile-Link-green.png)](https://github.com/linuxserver/docker-baseimage-alpine-nginx/blob/master/Dockerfile)
-
-  A custom base image built with [Alpine linux][appurl], [nginx][nginxurl] and [S6 overlay](https://github.com/just-containers/s6-overlay)..
-
-  Featuring :-
-
-  + weekly updates
-  + security updates
+  - Support for using our base images in your own projects is provided on a Reasonable Endeavours basis, please see our [Support Policy](https://www.linuxserver.io/supportpolicy) for details.
+  - There is no `latest` tag for any of our base images, by design. We often make breaking changes between versions, and we don't publish release notes like we do for the downstream images.
+  - If you're intending to distribute an image using one of our bases, please read our [docs on container branding](https://docs.linuxserver.io/general/container-branding/) first.
+  - Alpine releases are supported for 2 years, after which we will stop building new base images for that version.
 
   The following line is only in this repo for loop testing:
+
   - { date: "01.01.50:", desc: "I am the release message for this internal repo." }
   {%- endraw %}
