--- a/jenkins-vars.yml
+++ b/jenkins-vars.yml
@@ -6,7 +6,7 @@ external_type: na
 custom_version_command: "echo $(curl -sL http://dl-cdn.alpinelinux.org/alpine/v3.22/main/x86_64/APKINDEX.tar.gz | tar -xz -C /tmp && awk '/^P:'\"nginx\"'$/,/V:/' /tmp/APKINDEX | sed -n 2p | sed 's/^V://')_$(curl -sL http://dl-cdn.alpinelinux.org/alpine/v3.22/community/x86_64/APKINDEX.tar.gz | tar -xz -C /tmp && awk '/^P:'\"php84\"'$/,/V:/' /tmp/APKINDEX | sed -n 2p | sed 's/^V://')"
 release_type: stable
 release_tag: "3.22"
-ls_branch: master
+ls_branch: "3.22"
 repo_vars:
   - BUILD_VERSION_ARG = 'OS'
   - LS_USER = 'linuxserver'
